argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: argocd
spec:
  hostnames:
    - argo.lan
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
